# cxxdasp

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  RELEASE-NOTES.md  cxxdasp_config.cmake
android/: .gitignore
android/build-utils/: cxxdasp-build-setup.mk  cxxdasp-config.mk
android/dep_libs/: .gitignore  download_dep_libs.sh
android/dep_libs/cmake_download_dep_libs/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/android-ndk-profiler/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/ckfft/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/cxxporthelper/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/ffts/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/gmock/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/googletest/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/gp_fft/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/kiss_fft/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/mufft/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/ne10/: CMakeLists.txt
android/dep_libs/cmake_download_dep_libs/pffft/: CMakeLists.txt
android/jni/: Application.mk
android/utils/: .gitignore  benchmark_resampler.sh  benchmark_resampler_quality.sh  gen_testsounds.sh  push_simple-resampler.sh  push_testsounds.sh  resampling_quality_check.sh
cmake/: CMakeLists.txt
cmake/build-targets/: aarch64-linux-gnu_qemu-static.cmake  arm-linux-gnueabi_qemu-static.cmake  force-enable-arm-neon.cmake  mips-linux-gnu_qemu-static.cmake
cmake/cxxdasp/: CMakeLists.txt
cmake/dep_libs/: CMakeLists.txt
cmake/dep_libs/ckfft/: CMakeLists-ckfft.txt  CMakeLists.txt
cmake/dep_libs/cxxporthelper/: CMakeLists.txt
cmake/dep_libs/ffts/: CMakeLists.txt
cmake/dep_libs/fftw/: CMakeLists.txt  gen_vc_libs_x64.cmd
cmake/dep_libs/fftwf/: CMakeLists.txt  gen_vc_libs_x86.cmd
cmake/dep_libs/fresample/: CMakeLists-fresample.txt  CMakeLists.txt
cmake/dep_libs/gp_fft/: CMakeLists-gp_fft.txt  CMakeLists.txt
cmake/dep_libs/kfr/: CMakeLists.txt
cmake/dep_libs/kiss_fft/: CMakeLists-kiss_fft.txt  CMakeLists.txt
cmake/dep_libs/libsamplerate/: CMakeLists.txt
cmake/dep_libs/mufft/: CMakeLists-mufft.txt  CMakeLists.txt  fix_makefile.patch
cmake/dep_libs/ne10/: CMakeLists.txt
cmake/dep_libs/pffft/: CMakeLists-pffft.txt  CMakeLists.txt
cmake/dep_libs/soxr/: CMakeLists.txt
cmake/example/: CMakeLists.txt
cmake/example/biquad-filter/: CMakeLists.txt
cmake/example/cascaded-biquad-filter/: CMakeLists.txt
cmake/example/cascaded-trapezoidal-state-variable-filter/: CMakeLists.txt
cmake/example/fresample-resampler/: CMakeLists.txt
cmake/example/sample-format-converter/: CMakeLists.txt
cmake/example/simple-resampler/: CMakeLists.txt
cmake/example/soxr-resampler/: CMakeLists.txt
cmake/example/src-resampler/: CMakeLists.txt
cmake/example/trapezoidal-state-variable-filter/: CMakeLists.txt
cmake/example/window-function/: CMakeLists.txt
cmake/example/x2-resampler/: CMakeLists.txt
cmake/test/: CMakeLists.txt
cmake/test/fft/: CMakeLists.txt
cmake/test/filter_biquad_df1/: CMakeLists.txt
cmake/test/filter_biquad_tdf2/: CMakeLists.txt
cmake/test/filter_cascaded_biquad_df1/: CMakeLists.txt
cmake/test/filter_cascaded_biquad_tdf2/: CMakeLists.txt
cmake/test/filter_cascaded_tsvf/: CMakeLists.txt
cmake/test/filter_tsvf/: CMakeLists.txt
cmake/test/gmock/: CMakeLists.txt
cmake/test/googletest/: CMakeLists.txt
cmake/test/mixer/: CMakeLists.txt
cmake/test/resampler_polyphase/: CMakeLists.txt
cmake/test/sample_format_converter/: CMakeLists.txt
cmake/test/utils_utils/: CMakeLists.txt
example/biquad-filter/: biquad-filter.cpp
example/cascaded-biquad-filter/: cascaded-biquad-filter.cpp
example/cascaded-trapezoidal-state-variable-filter/: cascaded-trapezoidal-state-variable-filter.cpp
example/fresample-resampler/: fresample-resampler.cpp
example/include/: example_common.hpp
example/sample-format-converter/: sample-format-converter.cpp
example/simple-resampler/: simple-resampler.cpp
example/soxr-resampler/: soxr-resampler.cpp
example/src-resampler/: src-resampler.cpp
example/trapezoidal-state-variable-filter/: trapezoidal-state-variable-filter.cpp
example/window-function/: window-function.cpp
example/x2-resampler/: fft.inc  halfband.inc  x2-resampler.cpp
include/cxxdasp/: cxxdasp.hpp  cxxdasp_config.hpp
source/: cxxdasp.cpp
source/converter/: f32_to_s16_mono_neon_fast_sample_format_converter_core_operator.cpp  f32_to_s16_mono_neon_sample_format_converter_core_operator.cpp  f32_to_s16_mono_sse_sample_format_converter_core_operator.cpp  f32_to_s16_stereo_neon_fast_sample_format_converter_core_operator.cpp  f32_to_s16_stereo_neon_sample_format_converter_core_operator.cpp  f32_to_s16_stereo_sse_sample_format_converter_core_operator.cpp  s16_mono_to_f32_stereo_neon_fast_sample_format_converter_core_operator.cpp  s16_mono_to_f32_stereo_neon_sample_format_converter_core_operator.cpp  s16_mono_to_f32_stereo_sse_sample_format_converter_core_operator.cpp  s16_to_f32_mono_neon_fast_sample_format_converter_core_operator.cpp  s16_to_f32_mono_neon_sample_format_converter_core_operator.cpp  s16_to_f32_mono_sse_sample_format_converter_core_operator.cpp  s16_to_f32_stereo_neon_fast_sample_format_converter_core_operator.cpp  s16_to_f32_stereo_neon_sample_format_converter_core_operator.cpp  s16_to_f32_stereo_sse_sample_format_converter_core_operator.cpp
source/mixer/: f32_mono_neon_mixer_core_operator.cpp  f32_mono_sse_mixer_core_operator.cpp  f32_stereo_neon_mixer_core_operator.cpp  f32_stereo_sse_mixer_core_operator.cpp
source/utils/: utils.cpp  utils_impl_neon_optimized.cpp  (+1 more)
utils/: Doxyfile  benchmark_resampler.sh  benchmark_resampler_quality.sh  benchmark_resampler_speed.sh  concat_spectrograms.sh  design_half_band_filter.sce  design_smart_resampler_filter.sce  find_resampler.sh  gen_smart_resampler_filter_coeffs.sh  gen_spectrograms.sh  gen_testsounds.sh  resample_wav.sh  resampling_quality_check.sh  resampling_speed_check.sh  sample-format-converter-wav.sh
(+185 files in other folders)
